[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libcrypto"
version = "1.0.0"
description = "Comprehensive cryptocurrency wallet library with BIP39/BIP32 support and zero external dependencies"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LibCrypto Team", email = "info@libcrypto.dev"}
]
maintainers = [
    {name = "LibCrypto Team", email = "info@libcrypto.dev"}
]
keywords = [
    "cryptocurrency", "bitcoin", "ethereum", "wallet", "bip39", "bip32", "bip44",
    "mnemonic", "private-key", "public-key", "address", "hdwallet", "crypto",
    "blockchain", "litecoin", "dash", "dogecoin", "bitcoin-cash", "secp256k1"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Typing :: Typed"
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.10.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/libcrypto-dev/libcrypto"
Documentation = "https://libcrypto.readthedocs.io"
Repository = "https://github.com/libcrypto-dev/libcrypto.git"
Issues = "https://github.com/libcrypto-dev/libcrypto/issues"
PyPI = "https://pypi.org/project/libcrypto/"

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["libcrypto*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
libcrypto = ["py.typed", "*.md"]

[tool.pytest.ini_options]
testpaths = ["src/libcrypto/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=libcrypto",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=70"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "crypto: Cryptographic operation tests",
    "bip39: BIP39 mnemonic tests",
    "bip32: BIP32 HD wallet tests"
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true 